--- a/css/dev_style.css
+++ b/css/dev_style.css
@@ -7,3 +7,9 @@ input.error {
     color: red;
     font-size: 12px;
   }
+
+  .required {
+    color: red; /* Make the asterisk red */
+    font-weight: bold; /* Make the asterisk bold */
+    margin-left: 2px; /* Add some space between the label and asterisk */
+  }
